--- a/config/hugo.yaml
+++ b/config/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://github_user.github.io/
+baseURL: https://rltea.github.io/
 languageCode: en-us
 title: Sloth Blog
 theme: ["PaperMod"]
@@ -74,7 +74,7 @@ params:
   homeInfoParams:
     Title: "Hi there \U0001F44B"
     Content: Welcome to my blog
-  
+
   socialIcons:
     - name: x
       url: "https://x.com/"
