--- a/config/hugo.yaml
+++ b/config/hugo.yaml
@@ -14,7 +14,7 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: Sloth Blog
+  title: Sloth
   description: "ExampleSite description"
   keywords: [Blog, Portfolio, PaperMod]
   author: RLTea
